@@ -3,6 +3,8 @@ Version: 0.0.5
 Date: ????
   Changes:
     - Added get_state() to safely obtain the WindowState
+  Bugfixes:
+    - Actually pass the old state to build when applicable
 ---------------------------------------------------------------------------------------------------
 Version: 0.0.4
 Date: 2024-07-07
